# cwte2025-service-flagtransport

./: .gitignore  LICENSE  README.md
.github/workflows/: enochecker_test.yml
checker/: .env  Dockerfile  docker-compose.yml
checker/src/: checker.py  gunicorn.conf.py  pyproject.toml
meta/: fill_sequence_number_area.py  run.sh  run_enotest.sh  run_gateway.sh  seq_area_clear.sh  seq_area_set.sh
service/: Dockerfile.controller  Dockerfile.gateway  docker-compose.yml
service/src/: controller.cob  gateway.cob
